Muuuch progress; still a little lacking

--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,4 +1,4 @@
-\section{Code}\label{chapter:Code}
+\chapter{Code}\label{chapter:Code}
 
 \inputminted[firstline=21, lastline=39, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
