--- a/Thesis/Appendices/Normalization.tex
+++ b/Thesis/Appendices/Normalization.tex
@@ -1,30 +1,29 @@
-\section{\texorpdfstring{$J^\textnormal{pol}$}{J pol} and \texorpdfstring{$J^{\pi\perp}$}{J bulk} Normalization}\label{chapter:Normalization}
+\chapter{\texorpdfstring{$J^\textnormal{pol}$}{J pol} and \texorpdfstring{$J^{\pi\perp}$}{J bulk} Normalization}\label{chapter:Normalization}
 A useful substitution in normalizing these currents is that of the poloidal gyroradius explicitly as a function of temperature.
 \begin{align} % Rho_pi as a function of T
-	\rho_{\theta i} \,=\, \sqrt{\frac{2 \, m_i \, T}{e \, B_\theta^2}}
+	\rho_{\theta i} \,=\, \sqrt{\frac{2 \, m_i \, T}{e^2 \, B_\theta^2}}
 \end{align}
 This assumes the temperature is measured in eV.
 
 For the polarization current, start with substituting the definition of the normalized electric field, Eq.~\ref{eq:Z_and_rho_definitions}, into Eq.~\ref{eq:polarization_current_original}.
+It is assumed that the timescales of rate of change of $T$ and of $\rho_{\theta i}$ are much greater than the electric field, and are thus ignored.
 \begin{align} % Normalize polarization
-	J^\text{pol} \,&=\, \frac{m_i\,n}{B_?^2}\, \frac{\partial E_r}{\partial t}
-		\,=\, \frac{m_i \, n}{B_?^2} \, \frac{\partial}{\partial t}
+	J^\text{pol} \,&=\, \frac{m_i\,n}{B_\theta^2}\, \frac{\partial E_r}{\partial t}
+		\,=\, \frac{m_i \, n}{B_\theta^2} \, \frac{\partial}{\partial t}
 		\left(\frac{Z \, T}{e \, \rho_{\theta i}}\right)
-		\,=\, \frac{m_i \, n}{B_?^2} \frac{\partial}{\partial t}
+		\,=\, \frac{m_i \, n}{B_\theta^{\bcancel{2}}} \frac{\partial}{\partial t}
 		\left(\frac{Z \, T}{\cancel{e}} \, \sqrt{\frac{\cancel{e^2} \,
-		B_\theta^2}{2 \, m_i \, T}} \right) \\
-	&=\, \frac{n \, B_\theta}{B_?^2} \sqrt{\frac{m_i \, T}{2}} \,
-		\frac{\partial Z}{\partial t} \,\cdot\, \frac{e\,B_\theta\sqrt{2}}
-		{e\,B_\theta\sqrt{2}}
-		\,=\, \frac{e \, n}{2} \, \left(\frac{B_\theta}{B_?}\right)^2
-		\sqrt{\frac{2 \, m_i \, T}{e^2 \, B_\theta^2}} \,
-		\frac{\partial Z}{\partial t} \\
+		\cancel{B_\theta^2}}{2 \, m_i \, T}} \right) \\
+	&=\, \frac{n}{B_\theta} \sqrt{\frac{m_i \, T}{2}} \,
+		\frac{\partial Z}{\partial t} \,\cdot\, \frac{e\,\sqrt{2}}{e\,\sqrt{2}}
+		\,=\, \frac{e\,n}{2} \, \sqrt{\frac{2 \, m_i \, T}{e^2 \, B_\theta^2}}
+		\, \frac{\partial Z}{\partial t} \\
 	J^\text{pol} \,&=\, \frac{e \, n \, \rho_{\theta i}}{2} \,
-		\left(\frac{B_\theta}{B_?}\right)^2 \frac{\partial Z}{\partial t}
+		\frac{\partial Z}{\partial t}
 		\tag*{\eqref{eq:polarization_current_normalized}}
 \end{align}
 
-Shear Viscosity
+The normalization of the shear viscosity follows a similar fashion as the polarization current, with one important distinction.
 \begin{align} % Normalize shear viscosity
 	J^{\pi\perp} \,&=\, -\frac{m_i \, \mu}{B_\theta^2} \,
 		\frac{\partial}{\partial x} \left[n \, \frac{\partial E_r}
@@ -48,7 +47,7 @@ Shear Viscosity
 \end{align}
 The skipped steps involve taking many product and chain rules, with the prime notation denoting the spatial derivative.
 Previous formulations of the shear viscosity has ignored the temperature gradient and concavity, \emph{i.e.} $T^\prime = T^{\prime\prime} = 0$.
-This is continued here in an effort for simplicity, as solving the system of equations would be overly complex, and to serve a comparison with previous investigations.
+This is continued here in an effort for simplicity, as solving the system of equations would be overly complex, and to serve a comparison with previous investigations \cite{staps_backstepping_2017}.
 \begin{align} % Ignored temperature gradient and concavity
 	\rightarrow\, &\approx\, -\frac{m_i \, \mu}{B_\theta}
 		\sqrt{\frac{T}{2 \, m_i}} \, \frac{\partial}{\partial x} \left[n \,
