FiPy; finished intro

--- a/References/References.bib
+++ b/References/References.bib
@@ -336,6 +336,23 @@
 	pages = {A251}
 }
 
+@article{guyer_fipy:_2009,
+	title = {{FiPy}: {Partial} {Differential} {Equations} with {Python}},
+	volume = {11},
+	issn = {1521-9615},
+	shorttitle = {{FiPy}},
+	url = {http://www.ctcms.nist.gov/fipy},
+	doi = {10.1109/MCSE.2009.52},
+	number = {3},
+	urldate = {2018-04-23},
+	journal = {Computing in Science \& Engineering},
+	author = {Guyer, Jonathan E. and Wheeler, Daniel and Warren, James A.},
+	month = may,
+	year = {2009},
+	note = {IEEE},
+	pages = {6--15}
+}
+
 @article{hahm_rotation_1994,
 	title = {Rotation shear induced fluctuation decorrelation in a toroidal plasma},
 	volume = {1},
@@ -350,6 +367,7 @@
 	year = {1994},
 	pages = {2940--2944}
 }
+
 
 @book{hale_dynamics_1991,
 	edition = {1},
@@ -446,22 +464,6 @@
 	pages = {1}
 }
 
-@article{itoh_structural_2016,
-	title = {A structural bifurcation of transport in toroidal plasmas},
-	volume = {58},
-	issn = {0741-3335},
-	url = {http://stacks.iop.org/0741-3335/58/i=4/a=045017},
-	doi = {10.1088/0741-3335/58/4/045017},
-	abstract = {The mechanism of structure formation in plasmas, which is caused by the nonlinear link between the radial electric field, pressure gradient and turbulent fluctuations, is investigated. The suppression of turbulence by the shear and curvature of an inhomogeneous radial electric field is taken into account. The case of L-mode plasmas, where zonal flows are not excited, is studied. The 1D structure is investigated, and the stationary state under a given heat flux (constant in space and time) is analysed. It is shown that the effect of electric field curvature causes structural bifurcation from a state of a constant gradient to a state with a spatially corrugated gradient. The relationship between the period and amplitude of the corrugation is obtained. The electric field shear alone does not lead to such a structural bifurcation.},
-	language = {en},
-	number = {4},
-	urldate = {2018-04-18},
-	journal = {Plasma Physics and Controlled Fusion},
-	author = {Itoh, K. and Itoh, S.-I.},
-	year = {2016},
-	pages = {045017}
-}
-
 @article{itoh_model_1988,
 	title = {Model of {L} to {H}-{Mode} {Transition} in {Tokamak}},
 	volume = {60},
@@ -491,6 +493,22 @@
 	author = {Itoh, S.-I. and Itoh, K.},
 	year = {1989},
 	pages = {1031}
+}
+
+@article{itoh_structural_2016,
+	title = {A structural bifurcation of transport in toroidal plasmas},
+	volume = {58},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/58/i=4/a=045017},
+	doi = {10.1088/0741-3335/58/4/045017},
+	abstract = {The mechanism of structure formation in plasmas, which is caused by the nonlinear link between the radial electric field, pressure gradient and turbulent fluctuations, is investigated. The suppression of turbulence by the shear and curvature of an inhomogeneous radial electric field is taken into account. The case of L-mode plasmas, where zonal flows are not excited, is studied. The 1D structure is investigated, and the stationary state under a given heat flux (constant in space and time) is analysed. It is shown that the effect of electric field curvature causes structural bifurcation from a state of a constant gradient to a state with a spatially corrugated gradient. The relationship between the period and amplitude of the corrugation is obtained. The electric field shear alone does not lead to such a structural bifurcation.},
+	language = {en},
+	number = {4},
+	urldate = {2018-04-18},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Itoh, K. and Itoh, S.-I.},
+	year = {2016},
+	pages = {045017}
 }
 
 @article{itoh_solitary_1998,
@@ -733,7 +751,6 @@ Assuming that the anomalous transport is ambipolar, the radial electric field an
 	keywords = {power laws, scaling laws},
 	pages = {A415}
 }
-
 @article{ryter_survey_2013,
 	title = {Survey of the {H}-mode power threshold and transition physics studies in {ASDEX} {Upgrade}},
 	volume = {53},
@@ -1124,22 +1141,6 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	pages = {072309}
 }
 
-@article{weynants_confinement_1992,
-	title = {Confinement and profile changes induced by the presence of positive or negative radial electric fields in the edge of the {TEXTOR} tokamak},
-	volume = {32},
-	issn = {0029-5515},
-	url = {http://stacks.iop.org/0029-5515/32/i=5/a=I10},
-	doi = {10.1088/0029-5515/32/5/I10},
-	abstract = {Edge radial electric fields were induced in the edge of the TEXTOR tokamak by means of a polarization electrode in order to study their influence on the plasma edge profiles and its confinement. The studies include the generation of H-mode behaviour with either positive or negative polarity. Particle confinement (τ p ) of deuterium and of impurity ions as well as energy confinement (τ E ) are investigated. For positive fields which remain below the threshold for the L-H transition, an interesting regime of reduced particle confinement without noticeable energy confinement loss is found. A strong asymmetry in the edge density profiles with respect to the electric field sign is observed at these low polarization voltages. Above the threshold, H-mode behaviour with increased energy confinement and especially particle confinement can be produced with either polarity of the applied electric field. It is, however, found that, whereas the energy confinement in positive H-modes is at least as good as that in negative ones, the ratio τ p /τ E is about three times lower in the former case},
-	language = {en},
-	number = {5},
-	urldate = {2018-04-18},
-	journal = {Nuclear Fusion},
-	author = {Weynants, R. R. and Oost, G. van and Bertschinger, G. and Boedo, J. and Brys, P. and Delvigne, T. and Dippel, K. H. and Durodie, F. and {H. Euringer} and Finken, K. H. and Gray, D. S. and Hey, J. D. and Hillis, D. L. and Hogan, J. T. and Konen, L. and Leners, R. and Messiaen, A. M. and {A. Pospieszczyck} and Samm, U. and Schorn, R. P. and Schweer, B. and Telesca, G. and Nieuwenhove, R. van and Vandenplas, P. E.},
-	year = {1992},
-	pages = {837}
-}
-
 @article{weynants_dynamics_1990,
 	title = {Dynamics of {H}-mode-like edge transitions brought about by external polarization},
 	volume = {30},
@@ -1154,6 +1155,22 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	author = {Weynants, R. R. and Taylor, R. J.},
 	year = {1990},
 	pages = {945}
+}
+
+@article{weynants_confinement_1992,
+	title = {Confinement and profile changes induced by the presence of positive or negative radial electric fields in the edge of the {TEXTOR} tokamak},
+	volume = {32},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/32/i=5/a=I10},
+	doi = {10.1088/0029-5515/32/5/I10},
+	abstract = {Edge radial electric fields were induced in the edge of the TEXTOR tokamak by means of a polarization electrode in order to study their influence on the plasma edge profiles and its confinement. The studies include the generation of H-mode behaviour with either positive or negative polarity. Particle confinement (τ p ) of deuterium and of impurity ions as well as energy confinement (τ E ) are investigated. For positive fields which remain below the threshold for the L-H transition, an interesting regime of reduced particle confinement without noticeable energy confinement loss is found. A strong asymmetry in the edge density profiles with respect to the electric field sign is observed at these low polarization voltages. Above the threshold, H-mode behaviour with increased energy confinement and especially particle confinement can be produced with either polarity of the applied electric field. It is, however, found that, whereas the energy confinement in positive H-modes is at least as good as that in negative ones, the ratio τ p /τ E is about three times lower in the former case},
+	language = {en},
+	number = {5},
+	urldate = {2018-04-18},
+	journal = {Nuclear Fusion},
+	author = {Weynants, R. R. and Oost, G. van and Bertschinger, G. and Boedo, J. and Brys, P. and Delvigne, T. and Dippel, K. H. and Durodie, F. and {H. Euringer} and Finken, K. H. and Gray, D. S. and Hey, J. D. and Hillis, D. L. and Hogan, J. T. and Konen, L. and Leners, R. and Messiaen, A. M. and {A. Pospieszczyck} and Samm, U. and Schorn, R. P. and Schweer, B. and Telesca, G. and Nieuwenhove, R. van and Vandenplas, P. E.},
+	year = {1992},
+	pages = {837}
 }
 
 @article{wu_one-dimensional_2015,
@@ -1186,7 +1203,6 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	year = {1992},
 	pages = {1385--1387}
 }
-
 
 @article{zohm_dynamic_1994,
 	title = {Dynamic behavior of the {L}--{H} transition},
