T=100eV at edge

--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -63,8 +63,8 @@
 
 \begin{document}
 
-\section{Full Model Notes: 23 Apr
-2018}\label{full-model-notes-23-apr-2018}
+\section{Full Model Notes: 25 Apr
+2018}\label{full-model-notes-25-apr-2018}
 
 \small
 
@@ -78,7 +78,7 @@
         \frac{e^{-t^2}}{t - \zeta} \, \text{d}t~,~~
         \zeta \,\equiv\, \frac{\omega/k}{v_T} \\
     &\text{Approx. SI Units at Edge:} ~~~~ n \,\approx\, 0.5\times 10^{19}~\text{m}^{-3}~,
-        ~~ T \,\approx\, 500~e\text{V}~,~~ v_T \,\approx\, 10^5~\text{m}/\text{s}~,
+        ~~ T \,\approx\, 100~e\text{V}~,~~ v_{T_i} \,\approx\, 10^5~\text{m}/\text{s}~,
         ~~ \rho_{\theta i} \,\approx\, 10^{-4}~\text{m}
 \end{align}
 
@@ -132,7 +132,8 @@ dielectric constant, and viscosity: \small
     Z \,\equiv\, \frac{\rho_\theta \, e \, E_r}{T}~, ~~~~
         U \,=\, \frac{n\,T}{\gamma - 1}~, ~~~~
         \chi \,=\, \frac{D}{\zeta(\gamma - 1)}~, ~~~~
-        \epsilon \,=\, \frac{B_\theta^2}{B^2 \nu_i}~, ~~~~\mu \sim \rho_\theta^2
+        \epsilon \,=\, \frac{B_\theta^2}{B^2 \nu_i}~, ~~~~
+        \mu \approx m_i \, n \, v_{T_i} \, \lambda
 \end{align}
 
 \normalsize
