Update to spacing, description, and cx_rate

--- a/My_Notes/Full_Model_Notes.tex
+++ b/My_Notes/Full_Model_Notes.tex
@@ -63,8 +63,8 @@
 
 \begin{document}
 
-\section{Full Model Notes: 25 Apr
-2018}\label{full-model-notes-25-apr-2018}
+\section{Full Model Notes: 1 May
+2018}\label{full-model-notes-1-may-2018}
 
 \small
 
@@ -99,10 +99,9 @@ All temperatures are in eV. \small
         \,=\, 4.2058\times 10^{-5} \frac{n}{(T_\text{eV})^{3/2}}~,~~~
         \nu_{ii} \,=\, 1.2\, \nu_{ei} \, \sqrt{\frac{m_e}{m_i}}~,~~~
         \nu_{*j} \,=\, \frac{\nu_{ij}}{\omega_{bj}} \\
-    \langle \sigma_\text{cx} v \rangle \,&=\, \frac{C_\text{cx}}{\sqrt{T}} \,
-        \exp\left(-\frac{E_0}{T}\right)~,~~~
-        \langle \sigma_\text{ion} v \rangle \,=\, \frac{C_\text{ion}}{\sqrt{m_i}} \,
-        \exp\left(-\frac{E_0}{T}\right) \\
+    \langle \sigma_\text{cx} v \rangle \,&=\, 10^{-14} \sqrt[3]{100 \, T}
+        \,=\, 1.985\times 10^{-14} \sqrt{T} \\
+        &~~~~~~\text{Itoh 1989} ~~~~~~~~~ \text{Rozhansky 2001} \\
     \text{Non-formal:}& ~~ n_0 \,=\, \frac{n_0(0)}
         {\left(1 + \exp\left[k(x - d)\right]\right)}~,~~~
         n_0(0) \,=\, \frac{\theta \, \Gamma_c}{v_{T_i}} ~~ \text{for} ~~
@@ -129,7 +128,7 @@ Electric field normalization, energy definition, diffusivity relation,
 dielectric constant, and viscosity: \small
 
 \begin{align}
-    Z \,\equiv\, \frac{\rho_\theta \, e \, E_r}{T}~, ~~~~
+    Z \,\equiv\, \frac{e \, \rho_\theta \, E_r}{T}~, ~~~~
         U \,=\, \frac{n\,T}{\gamma - 1}~, ~~~~
         \chi \,=\, \frac{D}{\zeta(\gamma - 1)}~, ~~~~
         \epsilon \,=\, \frac{B_\theta^2}{B^2 \nu_i}~, ~~~~
@@ -167,7 +166,7 @@ forms):
         \frac{\partial T}{\partial x}\right] \,+\,
         \frac{\partial}{\partial x}\left[D\,T \,
         \frac{\partial n}{\partial x}\right]~, ~~~~
-        \frac{\partial T}{\partial t} \,=\, \frac{\partial }{\partial x}
+      \frac{\partial T}{\partial t} \,=\, \frac{\partial }{\partial x}
         \left[\frac{D}{\zeta} \, \frac{\partial T}{\partial x}\right] \,+\,
         \left(\frac{1}{\zeta} + 1\right) \frac{D}{n} \,
         \frac{\partial n}{\partial x} \, \frac{\partial T}{\partial x}
@@ -246,9 +245,12 @@ Steady-State Solutions \small
 
 \normalsize
 
-\subsubsection{Gradient Model}\label{gradient-model}
+\subsubsection{Physical Model}\label{physical-model}
 
-Staps' derivation, now known to be slightly incorrect: \small
+As a starting point, the nonambipolar currents are used, rather than
+some cubic polynomial. Start with Staps' derivation, now known to be
+slightly incorrect, since the polarization current is defined slightly
+incorrectly in his version: \small
 
 \begin{align}
     &\frac{m_i n T}{e \rho_{\theta i} B^2} \, \frac{\partial Z}{\partial t}
@@ -270,15 +272,15 @@ Corrected version, which is used: \small
 
 \begin{align}
     \text{Currents:} ~~~~ \frac{e \, n \, \rho_{\theta i}}{2} \,
-        \frac{\partial Z}{\partial t} \,&=\, \frac{e \, \mu \, \rho_{\theta i}}
-        {2} \, \frac{\partial}{\partial x} \left[n \, \frac{\partial Z}
+        \frac{\partial Z}{\partial t} \,&=\, \frac{e \, \rho_{\theta i}}
+        {2} \, \frac{\partial}{\partial x} \left[\mu \, n \, \frac{\partial Z}
         {\partial x}\right] \,+\, \sum_\text{k} e \, \Gamma^\text{k} \\
-    \text{Reduced:} ~~~~ n \, \frac{\partial Z}{\partial t} \,&=\, \mu \,
-        \frac{\partial}{\partial x} \left[n \, \frac{\partial Z}{\partial x}
-        \right] \,+\, \frac{2}{\rho_{\theta i}} \sum_\text{k} \Gamma^\text{k} \\
-    \sum_\text{k} \Gamma^\text{k} \,&=\, \Gamma_e^\text{an} \,-\,
-        \Gamma_i^\text{cx} \,-\, \Gamma_i^{\pi\parallel} \,-\,
-        \Gamma_i^\text{ol}
+    \text{Reduced:} ~~~~ n \, \frac{\partial Z}{\partial t} \,&=\, 
+        \frac{\partial}{\partial x} \left[\mu \, n \,
+        \frac{\partial Z}{\partial x} \right] \,+\, \frac{2}{\rho_{\theta i}}
+        \sum_\text{k} \Gamma^\text{k}~, ~~~ \sum_\text{k} \Gamma^\text{k}
+        \,=\, \Gamma_e^\text{an} \,-\, \Gamma_i^\text{cx}
+        \,-\, \Gamma_i^{\pi\parallel} \,-\, \Gamma_i^\text{ol}
 \end{align}
 
 \normalsize
@@ -320,7 +322,7 @@ Corrected version, which is used: \small
 
   \begin{align}
   g_n^\text{cx} \,=\,
-      -\frac{m_i \,n_0 \langle\sigma_\text{cx} v\rangle \,n T}{B_\theta^2}
+      -\frac{m_i \,n_0 \langle\sigma_\text{cx} v\rangle \,n \,T}{B_\theta^2}
       \left[\frac{B_\theta^2}{\epsilon^2 B_\phi^2} + 2\right]~,~~~~
       g_T^\text{cx} \,=\, \alpha_\text{cx}\,g_n^\text{cx}~,~~~~
       g_Z^\text{cx} \,=\, -\frac{g_n^\text{cx}}{\rho_{\theta i}}
